--- a/css/style.css
+++ b/css/style.css
@@ -86,8 +86,8 @@ main {
 }
 
 .right-panel {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 #studentList,
@@ -126,42 +126,78 @@ select {
 }
 
 #studentTrendCharts {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .chart-container {
-    width: calc(50% - 10px);
-    height: 300px;
-    margin-bottom: 20px;
+  width: calc(50% - 10px);
+  height: 300px;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 768px) {
-    .chart-container {
-        width: 100%; /* 1 chart per row on smaller screens */
-    }
+  .chart-container {
+    width: 100%; /* 1 chart per row on smaller screens */
+  }
 }
 
 .file-upload {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 #csvFileInput {
-    margin-right: 1rem;
+  margin-right: 1rem;
 }
 
 .export-btn {
-    display: block;
-    margin-top: 10px;
-    padding: 5px 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  display: block;
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .export-btn:hover {
-    background-color: #45a049;
+  background-color: #45a049;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 800px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
