--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,25 @@ main {
   flex: 1;
 }
 
+.colloquiums {
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: 14px;
+}
+
+.results {
+  flex: 3;
+  display: flex;
+  align-items: center;
+}
+
+.results h2 {
+  margin: 0 0 .4rem;
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 1.8rem;
+}
+
 .bottom-section {
   flex: 1;
   display: flex;
