--- a/css/style.css
+++ b/css/style.css
@@ -268,4 +268,22 @@ select {
   cursor: pointer;
 }
 
+.avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #3498db;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  margin-right: 10px;
+  font-size: 16px;
+}
 
+.student-info {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
